--- a/info.css
+++ b/info.css
@@ -20,7 +20,10 @@ header{
 	height:100vh ;
 	width:300px ;
 	padding: 15px 30px;
-	background-color:var(--sideBGColor) ;
+	  background-image: url(m.avif);
+           background-size: cover;
+          background-attachment: fixed;
+/* 	background-color:var(--sideBGColor) ; */
 	overflow-y: auto;
 	position: fixed;
 	left: 0;
